<resources>
    <string name="app_name">Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_text">Welcome Back!</string>
    <string name="login_continue">Login to continue</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_account">Don\'t have Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="create">Create</string>
    <string name="hello">Hello</string>
    <string name="user">User</string>
    <string name="quiz">Start Quiz</string>
    <string name="rules">Rules</string>
    <string name="history">History</string>
    <string name="sign_out">Sign Out</string>
    <string name="edit_password">Edit Password</string>
    <string name="maths">Maths</string>
    <string name="geography">Geography</string>
    <string name="literature">Literature</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="current_Question">"Current Question: %1$d"</string>
</resources>