<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.QuizOptionFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvMaths"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/ivMaths"
                android:layout_width="@dimen/homeImageSize"
                android:layout_height="@dimen/homeImageSize"
                android:layout_marginStart="50dp"
                android:src="@drawable/maths"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvMaths"
                style="@style/homeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/maths"
                app:layout_constraintBottom_toBottomOf="@+id/ivMaths"
                app:layout_constraintStart_toEndOf="@+id/ivMaths"
                app:layout_constraintTop_toTopOf="@+id/ivMaths" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvGeo"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivGeo"
                android:layout_width="@dimen/homeImageSize"
                android:layout_height="@dimen/homeImageSize"
                android:layout_marginStart="50dp"
                android:src="@drawable/geo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGeo"
                style="@style/homeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/geography"
                app:layout_constraintBottom_toBottomOf="@+id/ivGeo"
                app:layout_constraintStart_toEndOf="@+id/ivGeo"
                app:layout_constraintTop_toTopOf="@+id/ivGeo" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvLit"
        style="@style/cardStyle"
        android:layout_width="match_parent"
        android:layout_height="124dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivLit"
                android:layout_width="@dimen/homeImageSize"
                android:layout_height="@dimen/homeImageSize"
                android:layout_marginStart="50dp"
                android:src="@drawable/literature"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvLit"
                style="@style/homeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="@string/literature"
                app:layout_constraintBottom_toBottomOf="@+id/ivLit"
                app:layout_constraintStart_toEndOf="@+id/ivLit"
                app:layout_constraintTop_toTopOf="@+id/ivLit" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>